# ansible-lab

./: .gitignore  404.html  README.md  TODO.md  Vagrant.windows  Vagrantfile  config_ips.sh  env_up.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  vagrant.md
00_jaba/: index.html
01_configuracao_do_ambiente/: index.html
02_o_basico_necessario_sobre_vagrant/: index.html
03_ansible_basico/: index.html
03_configuracao_do_ansible/: index.html
04_ansible_basico/: index.html
04_configuracao_do_ansible/: index.html
05_playbooks/: index.html
06_tasks/: index.html
07_ansible_galaxy/: index.html
99_problemas_comuns/: index.html
arch_scripts/: basic.bash  basic.sh  get_vagrant_ips.sh  ips_from_hosts.sh
docs/: 00_jaba.md  01_configuracao_do_ambiente.md  02_o_basico_necessario_sobre_vagrant.md  03_ansible_basico.md  03_configuracao_do_ansible.md  04_ansible_basico.md  04_configuracao_do_ansible.md  05_playbooks.md  06_tasks.md  07_ansible_galaxy.md  99_problemas_comuns.md  index.md  referencias.md
playbooks/: arch_base_packages.yml  config_python.yml  emacs.yml  pipx_httpie.yml  play_tasks.yml  requirements.yml  variaveis.yml  web_server.yml
playbooks/tasks/: dev.yml  dev_env.yml  nginx.yml  py_311.yml  pyenv.yml
referencias/: index.html
search/: search_index.json
stuff/: resposta_ubuntu_setup.txt  vagrant.md
stuff/draws/: .~lock.ansible_arch.odg#  ansible_arch.odg
stylesheets/: extra.css
